--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -25,19 +25,19 @@ jobs:
     steps:
       - name: Setup Node
         uses: actions/setup-node@v3.8.1
-      - name: Install
-        run: "npm install"
-      - name: Build
-        run: "npm run build"
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Install
+        run: "npm install"
+        working-directory: "."
+      - name: Build
+        run: "npm run build"
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          # Upload entire repository
-          path: './dist'
+          path: "./dist"
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
